recherche par numero de coptes update
